--- a/deploy/templates/deployment.yaml
+++ b/deploy/templates/deployment.yaml
@@ -35,6 +35,12 @@ spec:
       containers:
         - name:  {{ .Chart.Name }}
           image: "{{ .Values.variables.imageRepository }}:{{ .Values.variables.imageAppVersion  | default .Chart.AppVersion }}"
+          command:
+            - php
+          args:
+            - artisan
+            - queue:work
+            - --queue=youth.course.enrollment.q
           imagePullPolicy: {{ .Values.variables.imagePullPolicy }}
           ports:
             - containerPort: 80
