--- a/deploy/templates/deployment.yaml
+++ b/deploy/templates/deployment.yaml
@@ -35,6 +35,11 @@ spec:
       containers:
         - name:  {{ .Chart.Name }}
           image: "{{ .Values.variables.imageRepository }}:{{ .Values.variables.imageAppVersion  | default .Chart.AppVersion }}"
+          args:
+            - service apache2 start && php /app/artisan queue:work --queue=youth.course.enrollment.q
+          command:
+            - sh
+            - -c
           imagePullPolicy: {{ .Values.variables.imagePullPolicy }}
           ports:
             - containerPort: 80
