--- a/deploy/templates/deployment.yaml
+++ b/deploy/templates/deployment.yaml
@@ -120,6 +120,11 @@ spec:
           - name: cmd-vol
             mountPath: /vol
             {{end}}
+      hostAliases:
+      - ip: "192.168.10.95"
+        hostnames:
+        - "apim-dev.nise3.xyz"
+        - "identity-dev.nise3.xyz"
       volumes:
       - name: "{{ .Chart.Name }}"
         persistentVolumeClaim:
