--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "ext-pdo": "*",
         "elasticsearch/elasticsearch": "^8.0",
         "doctrine/dbal": "^3.2",
+        "elasticsearch/elasticsearch": "^8.0",
         "felixkiss/uniquewith-validator": "^3.4",
         "flipbox/lumen-generator": "^8.2",
         "fruitcake/laravel-cors": "^2.0",
