--- a/deploy/version.yaml
+++ b/deploy/version.yaml
@@ -4,4 +4,4 @@ variables:
   imageAppVersion: "2.1.10"
 
   #app buil image
-  imageRepository: "registry.nise3.xyz/nise3-youth-management-api-service"
+  imageRepository: "registry.nise.gov.bd/nise3-youth-management-api-service"
