--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -68,8 +68,8 @@ variables:
     DB_USERNAME: core3
     DB_PASSWORD: core3
 
-    LOG_CHANNEL: "stack"
-    ELASTIC_HOST: "http://localhost:9200"
+    LOG_CHANNEL: "elasticsearch"
+    ELASTIC_HOST: "http://elasticsearch.monitoring:9200"
     ELASTIC_LOGS_INDEX: "youth_file_logs"
 
     CACHE_DRIVER: "redis"
@@ -106,6 +106,11 @@ variables:
     APP_ENV: "local"
     APP_DEBUG: "false"
     APP_URL: "youthapi.bus.softbd.xyz"
+
+    LOG_CHANNEL: "elasticsearch"
+    ELASTIC_HOST: "http://elasticsearch.monitoring:9200"
+    ELASTIC_LOGS_INDEX: "youth_file_logs"
+
     DB_HOST: 172.17.177.79
     DB_PORT: "3306"
     DB_DATABASE: youth
@@ -126,6 +131,11 @@ variables:
     APP_ENV: "local"
     APP_DEBUG: "false"
     APP_URL: "youthapi.bus.softbd.xyz"
+
+    LOG_CHANNEL: "elasticsearch"
+    ELASTIC_HOST: "http://elasticsearch.monitoring:9200"
+    ELASTIC_LOGS_INDEX: "youth_file_logs"
+
     DB_HOST: 172.17.177.79
     DB_PORT: "3306"
     DB_DATABASE: youth
