--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -68,7 +68,7 @@ variables:
     DB_USERNAME: core3
     DB_PASSWORD: core3
 
-    LOG_CHANNEL: "stack"
+    LOG_CHANNEL: "elasticsearch"
     ELASTIC_HOST: "http://elasticsearch.monitoring:9200"
     ELASTIC_LOGS_INDEX: "youth_file_logs"
 
