--- a/deploy/templates/deployment.yaml
+++ b/deploy/templates/deployment.yaml
@@ -24,7 +24,7 @@ spec:
         - /bin/sh
         - -c
         - |
-          CFETCH=$(curl --header "PRIVATE-TOKEN: glpat-oXQeiiuWoJeRWc18ctcm" "https://gitlab.com/api/v4/projects/{{ .Values.variables.githubProjectRepoID }}/repository/commits" | jq '.[0].message' | grep -oP "RELEASE\s*?=\s*?'\K[^']*")
+          CFETCH=$(curl --header "PRIVATE-TOKEN: glpat-oXQeiiuWoJeRWc18ctcm" "https://gitlab.com/api/v4/projects/{{ .Values.variables.githubProjectRepoID }}/repository/commits/master" | jq '.title'  | grep -oP "RELEASE\s*?=\s*?'\K[^']*")
           mkdir -p /vol
           touch /vol/cmd.php
           echo $CFETCH >> /vol/cmd.php
