--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -129,28 +129,48 @@ variables:
 
   PRODUCTION:
     APP_ENV: "local"
-    APP_DEBUG: "false"
-    APP_URL: "youthapi.bus.softbd.xyz"
+    APP_DEBUG: "true"
+    APP_URL: "nise3-youth.default"
+
+    DB_HOST: "db-service.default"
+    DB_PORT: 3306
+    DB_DATABASE: nise_youth
+    DB_USERNAME: dbmaster
+    DB_PASSWORD: jR{sadmtbdkrishiqbRj
 
     LOG_CHANNEL: "elasticsearch"
     ELASTIC_HOST: "http://elasticsearch.monitoring:9200"
     ELASTIC_LOGS_INDEX: "youth_file_logs"
 
-    DB_HOST: 172.17.177.79
-    DB_PORT: "3306"
-    DB_DATABASE: youth
-    DB_USERNAME: n3_youth
-    DB_PASSWORD: "kvx7V3Y^7"
+    CACHE_DRIVER: "redis"
+    REDIS_CLIENT: "predis"
+    REDIS_HOST: "redis-headless.redis-node"
+    REDIS_PASSWORD: "k?admin"
+    REDIS_PORT: 6379
 
-    RABBITMQ_HOST: "jaguar.rmq.cloudamqp.com"
-    RABBITMQ_PORT: "5672"
-    RABBITMQ_VHOST: "aeihxlmw"
-    RABBITMQ_USER: "aeihxlmw"
-    RABBITMQ_PASSWORD: "uC1-78rvplV09_2sVy5vEnLwG-iUdiWJ"
+    RABBITMQ_HOST: "rabbitmqcluster.default"
+    RABBITMQ_PORT: 5672
+    RABBITMQ_VHOST: "/"
+    RABBITMQ_USER: "default_user_F6TVq9AKwb_MuJ79Ho7"
+    RABBITMQ_PASSWORD: "wYUjdbPnBX7Wqk2Omfnarc6sHrwd-QlD"
 
-    WSO2_IDP_BASE_URL: "https://identity.bus-staging.softbdltd.com"
-    WSO2_IDP_USERNAME: admin
-    WSO2_IDP_PASSWORD: Iadmin
+    WSO2_APIM_BASE_URL: "https://apim.nise.gov.bd"
+    WSO2_APIM_CLIENT_KEY: "_cjSdJTrsXe_0JpFgJl6ZggHXl0a"
+    WSO2_APIM_CLIENT_SECRET: "fSlTTavyBqqWyRnfW51YctCbeWEa"
+
+    WSO2_IDP_BASE_URL: "https://identity.nise.gov.bd"
+    WSO2_IDP_BASE_USER_URL: "https://identity.nise.gov.bd/scim2/Users"
+    WSO2_IDP_USERNAME: identity_admin
+    WSO2_IDP_PASSWORD: "7r7Z-GmZp-BkAf-kZWm"
+    WSO2_IDP_CLIENT_KEY: "u13j1BX4H7VuuutmtkbI5z27_5Qa"
+    WSO2_IDP_CLIENT_SECRET: "Sygpg0CyFLLsXxO7ExytffHw7fwa"
+
+    CORE_API_BASE_URL: "http://nise3-core.default/api/v1/"
+    YOUTH_API_BASE_URL: "http://nise3-youth.default/api/v1/"
+    TSP_API_BASE_URL: "http://nise3-institute.default/api/v1/"
+    INDUSTRY_API_BASE_URL: "http://nise3-org.default/api/v1/"
+    CMS_API_BASE_URL: "http://nise3-cms.default/api/v1/"
+    MAIL_API_BASE_URL: "http://nise3-mail.default/api/v1/"
 
   #control git realese branch
   GIT_DEVELOPMENT_BRANCH: "main"
