--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -138,7 +138,7 @@ variables:
     DB_USERNAME: dbmaster
     DB_PASSWORD: jR{sadmtbdkrishiqbRj
 
-    LOG_CHANNEL: "elasticsearch"
+    LOG_CHANNEL: "file"
     ELASTIC_HOST: "http://elasticsearch.monitoring:9200"
     ELASTIC_LOGS_INDEX: "youth_file_logs"
 
