--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -56,7 +56,7 @@ variables:
 
   # application config
   # APP_ENV environment available values are DEV/STAGING/PRODUCTION
-  APP_ENV: "DEV"
+  APP_ENV: "PRODUCTION"
   DEV:
     APP_ENV: "local"
     APP_DEBUG: "true"
@@ -138,7 +138,7 @@ variables:
     DB_USERNAME: dbmaster
     DB_PASSWORD: jR{sadmtbdkrishiqbRj
 
-    LOG_CHANNEL: "file"
+    LOG_CHANNEL: "elasticsearch"
     ELASTIC_HOST: "http://elasticsearch.monitoring:9200"
     ELASTIC_LOGS_INDEX: "youth_file_logs"
 
