--- a/deploy/values copy.yaml
+++ b/deploy/values copy.yaml
@@ -22,7 +22,7 @@ variables:
 
   # application config
   # APP_ENV environment available values are DEV/STAGING/PRODUCTION
-  APP_ENV: "PRODUCTION"
+  APP_ENV: "DEV"
 
   DEV:
     APP_ENV: "local"
@@ -56,7 +56,7 @@ variables:
     WSO2_APIM_CLIENT_SECRET: "fSlTTavyBqqWyRnfW51YctCbeWEa"
 
     WSO2_IDP_BASE_URL: https:\/\/identity-dev.nise3.xyz
-    WSO2_IDP_BASE_USER_URL: https:\/\/identity-dev.nise3.xyz/scim2/Users
+    WSO2_IDP_BASE_USER_URL: https:\/\/identity-dev.nise3.xyz\/scim2\/Users
     WSO2_IDP_USERNAME: admin
     WSO2_IDP_PASSWORD: Iadmin
     WSO2_IDP_CLIENT_KEY: "u13j1BX4H7VuuutmtkbI5z27_5Qa"
