--- a/deploy/templates/deployment.yaml
+++ b/deploy/templates/deployment.yaml
@@ -53,10 +53,10 @@ spec:
       containers:
         - name:  {{ .Chart.Name }}
             {{ if eq .Values.variables.APP_ENV "DEV" }}
-          image: "{{ .Values.variables.common.imageRepository }}:{{ .Values.variables.systemDev.imageAppVersion  | default .Chart.AppVersion }}"
+          image: "{{ .Values.variables.imageRepository }}:{{ .Values.variables.devBuildImageVersion  | default .Chart.AppVersion }}"
             {{ end }}
             {{ if eq .Values.variables.APP_ENV "PRODUCTION" }}
-          image: "{{ .Values.variables.common.imageRepository }}:{{ .Values.variables.systemProd.imageAppVersion  | default .Chart.AppVersion }}"
+          image: "{{ .Values.variables.imageRepository }}:{{ .Values.variables.prodBuildImageVersion  | default .Chart.AppVersion }}"
             {{ end }}
           args:
             - service apache2 start && php /app/artisan queue:work --queue=youth.course.enrollment.q
