--- a/deploy/version.yaml
+++ b/deploy/version.yaml
@@ -1,7 +1,10 @@
 variables:
 
-  # app version, changing version will auto deploy the app to current version
-  imageAppVersion: "2.1.19"
+    # app version, changing version will auto deploy the app to current version
+  devBuildImageVersion: "2.1.19"
+
+  # always add prefix k- before production image version
+  prodBuildImageVersion: "2.1.19"
 
   #app buil image
   imageRepository: "registry.nise.gov.bd/nise3-youth-management-api-service"
