--- a/deploy/version.yaml
+++ b/deploy/version.yaml
@@ -4,7 +4,7 @@ variables:
   devBuildImageVersion: "2.2.4"
 
   # always add prefix k- before production image version
-  prodBuildImageVersion: "2.2.4"
+  prodBuildImageVersion: "prod-2.2.5"
 
   #app buil image
   imageRepository: "registry.nise.gov.bd/nise3-youth-management-api-service"
