--- a/deploy/version.yaml
+++ b/deploy/version.yaml
@@ -4,7 +4,7 @@ variables:
   devBuildImageVersion: "2.2.16"
 
   # always add prefix k- before production image version
-  stagingBuildImageVersion: "prod-2.2.7"
+  prodBuildImageVersion: "prod-2.2.11"
 
   #app buil image
   imageRepository: "registry.nise.gov.bd/nise3-youth-management-api-service"
