Youth Bulk import from skill portal

--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,22 @@
         "php": "^8.0",
         "ext-json": "*",
         "ext-pdo": "*",
-        "elasticsearch/elasticsearch": "^7.0",
+        "anis072/lumen-queue-rabbitmq": "^12.0",
         "doctrine/dbal": "^3.2",
+        "elasticsearch/elasticsearch": "^7.0",
         "felixkiss/uniquewith-validator": "^3.4",
         "flipbox/lumen-generator": "^8.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.3",
+        "halaxa/json-machine": "^1.1",
+        "illuminate/redis": "^8.73",
         "irazasyed/larasupport": "^1.7",
+        "ixudra/curl": "6.*",
         "khbd/laravel-wso2-identity-api-user": "^0.0.5",
         "laravel/lumen-framework": "^8.0",
-        "ixudra/curl": "6.*",
         "laravel/tinker": "^2.6",
-        "illuminate/redis": "^8.73",
-        "predis/predis": "~1.0",
         "phabloraylan/lumen-middleware-trim-or-convert-strings": "^1.0",
-        "anis072/lumen-queue-rabbitmq": "^12.0"
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
