--- a/deploy/values.production.yaml
+++ b/deploy/values.production.yaml
@@ -79,7 +79,7 @@ serviceTargetPort: 80
 developBranch: "master"
 
 #git hub project id
-githubProjectRepoID: "28218781"
+githubProjectRepoID: ""
 
 #fetch laravel php artisan or bash command and run on run
 enableGitCommitCommandFetch: true
