--- a/deploy/values.staging.yaml
+++ b/deploy/values.staging.yaml
@@ -81,7 +81,7 @@ serviceTargetPort: 80
 developBranch: "staging"
 
 #git hub project id
-githubProjectRepoID: "28218781"
+githubProjectRepoID: ""
 
 #fetch laravel php artisan or bash command and run on run
 enableGitCommitCommandFetch: true
